Fix links' contrast in light mode.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -20,8 +20,8 @@
 @layer components {
     .link {
         @apply underline
-        text-orange-600 hover:text-orange-800
-        dark:text-orange-400 dark:hover:text-orange-300;
+        text-orange-700 hover:text-orange-600
+        dark:text-orange-400 dark:hover:text-orange-500;
     }
 
     .button-base {
